# competitive

./: .gitignore  .gitmodules  CMakeLists.txt  run.template  submission.template  task.template
lib/gtest/cmake/: internal_utils.cmake
lib/gtest/include/gtest/: gtest-death-test.h
lib/gtest/include/gtest/internal/: gtest-port.h  gtest-tuple.h
lib/gtest/src/: gtest-internal-inl.h  gtest.cc  gtest_main.cc
lib/spcppl/numbers/: BigInteger.hpp
output/: main.cpp
tasks/: A2Char.cpp  AABCPreparation.cpp  AAC.cpp  AAirplane.cpp  AAnotherOneBitesTheDust.cpp  ABallDistribution.cpp  ABeskonechnayaPosledovatelnost.cpp  ABox.cpp  AChangingACharacter.cpp  ACirclePond.cpp  ADeli.cpp  ADigitMachine.cpp  ADiv.cpp  ADivizon.cpp  ADobavteKonfet.cpp  AFirstGrid.cpp  AHarmony.cpp  AHeavyRotation.cpp  AHorizon.cpp  AIgraVAvtobuse.cpp  AIhabNeMozhetStatTanosom.cpp  AKalevichIShakhmati.cpp  AKamennayaIgra.cpp  AKcal.cpp  AKhudozhestvennoeZanyatie.cpp  AKonneRIARCMarklandN.cpp  AKorotkiePodstroki.cpp  AKvadratnayaStroka.cpp  AKyuInAtCoder.cpp  ALastLetter.cpp  ALavochki.cpp  ALeshaISlomaniiKontest.cpp  ALetayushchayaSortirovkaProstayaVersiya.cpp  AMassiv.cpp  AMatematicheskayaZadacha.cpp  AMergingArrays.cpp  AMexPodmnozhestv.cpp  AMinimalniiKvadrat.cpp  AMinimizatsiyaStroki.cpp  AMultiplication1.cpp  (+361 more)
tasks/acmp/: Kartochki.cpp  acmp114.cpp  acmp120.cpp  acmp165.cpp  acmp320.cpp  acmp368.cpp
tasks/atcoder/: ARightTriangle.cpp  BCollatzProblem.cpp  CGrandGarden.cpp
testrunner/: main.cpp
